[workspace]
resolver = "2"
members = [
    "cli",
    "extra-types",
    "known-path",
    "known-proto",
    "light-client",
    "program",
    "proto",
    "state",
]

[workspace.package]
version = "0.1.0"
homepage = "https://eclipse.builders/"
repository = "https://github.com/Eclipse-Laboratories-Inc/ibc"
authors = ["Eclipse Developers"]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.70"
bincode = "1.3.3"
bs58 = "0.4.0"
bytes = "1.4.0"
clap = { version = "4.2.4", features = ["derive"] }
colored_json = "3.1.0"
derive_more = "0.99.17"
dirs-next = "2.0.0"
eclipse-ibc-extra-types = { path = "extra-types" }
eclipse-ibc-known-path = { path = "known-path" }
eclipse-ibc-light-client = { path = "light-client" }
eclipse-ibc-program = { path = "program" }
eclipse-ibc-proto = { path = "proto" }
eclipse-ibc-state = { path = "state" }
eclipse-known-proto = { path = "known-proto" }
hex = "0.4.3"
ibc = "0.37.0"
ibc-proto = "0.26.0"
ics23 = "0.9.0"
jmt = "=0.4.0"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
serde = "1.0.160"
serde_json = "1.0.96"
sha2 = "0.10.6"
solana-client = "=1.15.2"
solana-program-runtime = "=1.15.2"
solana-sdk = "=1.15.2"
tendermint = "0.29.1"
tendermint-proto = "0.29.1"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full", "tracing"] }
tonic = "0.9.2"
tonic-build = "0.9.2"

[patch.crates-io.solana-client]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-frozen-abi]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-frozen-abi-macro]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-logger]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-metrics]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-program]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-program-runtime]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-sdk]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-sdk-macro]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

# Do not include solana-zk-token-sdk as it causes compile errors.
