[workspace]
resolver = "2"
members = [
    "cli",
    "extra-types",
    "known-path",
    "known-proto",
    "light-client",
    "program",
    "proto",
    "state",
]

[workspace.package]
version = "0.1.0"
homepage = "https://eclipse.builders/"
repository = "https://github.com/Eclipse-Laboratories-Inc/ibc"
authors = ["Eclipse Developers"]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
borsh = "0.10.3"
bs58 = "0.4.0"
bytes = "1.4.0"
clap = { version = "4.2.7", features = ["derive"] }
colored_json = "3.1.0"
derive_more = "0.99.17"
dirs-next = "2.0.0"
eclipse-ibc-extra-types = { path = "extra-types" }
eclipse-ibc-known-path = { path = "known-path" }
eclipse-ibc-known-proto = { path = "known-proto" }
eclipse-ibc-light-client = { path = "light-client" }
eclipse-ibc-program = { path = "program" }
eclipse-ibc-proto = { path = "proto" }
eclipse-ibc-state = { path = "state" }
ed25519-dalek = "1.0.1"
env_logger = "0.10.0"
hex = "0.4.3"
ibc = "0.40.0"
ibc-proto = "0.29.0"
ics23 = "0.9.0"
jmt = "=0.4.0"
log = "0.4.17"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
rand = "0.8.5"
serde = "1.0.163"
serde_json = "1.0.96"
sha2 = "0.10.6"
solana-client = "=1.15.2"
solana-program-runtime = "=1.15.2"
solana-sdk = "=1.15.2"
tendermint = "0.30.0"
tendermint-proto = "0.30.0"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full", "tracing"] }
tonic = "0.9.2"
tonic-build = "0.9.2"

[patch.crates-io.solana-client]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-frozen-abi]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-frozen-abi-macro]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-logger]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-metrics]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-program]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-program-runtime]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-sdk]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

[patch.crates-io.solana-sdk-macro]
git = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
branch = "eclipse/v1.15.2"
version = "=1.15.2"

# Do not include solana-zk-token-sdk as it causes compile errors.
