[package]
name = "eclipse-ibc-cli"
description = "Eclipse IBC CLI"
version = "0.1.0"
homepage = "https://eclipse.builders/"
repository = "https://github.com/Eclipse-Laboratories-Inc/ibc"
authors = ["Eclipse Developers"]
edition = "2021"

[dependencies]
anyhow = "1.0.70"
bincode = "1.3.3"
bs58 = "0.4.0"
clap = { version = "4.2.2", features = ["derive", "env"] }
dirs-next = "2.0.0"
eclipse-ibc-light-client = { path = "../light-client" }
eclipse-ibc-program = { path = "../program" }
eclipse-ibc-proto = { path = "../proto" }
eclipse-ibc-state = { path = "../state" }
ibc = "0.37.0"
ibc-proto = "0.29.0"
known-proto = { path = "../known-proto" }
prost = "0.11.9"
serde = "1.0.160"
serde_json = "1.0.96"
solana-client = "=1.15.2"
solana-sdk = "=1.15.2"
tokio = { version = "1.27.0", features = ["full", "tracing"] }
