[package]
name = "eclipse-ibc-cli"
description = "Eclipse IBC CLI"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
colored_json = { workspace = true }
dirs-next = { workspace = true }
eclipse-ibc-light-client = { workspace = true }
eclipse-ibc-program = { workspace = true }
eclipse-ibc-proto = { workspace = true }
eclipse-ibc-state = { workspace = true }
hex = { workspace = true }
ibc = { workspace = true }
ibc-proto = { workspace = true }
jmt = { workspace = true }
known-proto = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
tendermint = { workspace = true }
tokio = { workspace = true }
