[package]
name = "eclipse-ibc-extra-types"
description = "Eclipse IBC domain types that map to raw IBC types"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
eclipse-ibc-proto = { workspace = true }
eclipse-known-proto = { workspace = true }
ibc = { workspace = true }
ibc-proto = { workspace = true }
