[package]
name = "eclipse-ibc-known-path"
description = "Eclipse IBC known paths in the Merkle store"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
ibc = { workspace = true }
