[package]
name = "known-proto"
description = "Known Protobuf serializations"
version = "0.1.0"
homepage = "https://eclipse.builders/"
repository = "https://github.com/Eclipse-Laboratories-Inc/ibc"
authors = ["Eclipse Developers"]
edition = "2021"

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
ibc = "0.36.0"
ibc-proto = "0.28.0"
prost = "0.11.8"
tendermint = "0.29.1"
tendermint-proto = "0.29.1"
