[package]
name = "known-proto"
description = "Known Protobuf serializations"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
ibc = { workspace = true }
ibc-proto = { workspace = true }
prost = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
