[package]
name = "eclipse-ibc-light-client"
description = "Eclipse IBC light client"
version = "0.1.0"
homepage = "https://eclipse.builders/"
repository = "https://github.com/Eclipse-Laboratories-Inc/ibc"
authors = ["Eclipse Developers"]
edition = "2021"

[dependencies]
eclipse-ibc-proto = { path = "../proto" }
ibc = "0.37.0"
ibc-proto = "0.26.0"
ics23 = "0.9.0"
jmt = "=0.4.0"
known-proto = { path = "../known-proto" }
prost = "0.11.9"
serde = "1.0.159"
solana-sdk = "=1.15.2"
tendermint = "0.29.1"
thiserror = "1.0.40"
