[package]
name = "eclipse-ibc-light-client"
description = "Eclipse IBC light client"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
eclipse-ibc-proto = { workspace = true }
ibc = { workspace = true }
ibc-proto = { workspace = true }
ics23 = { workspace = true }
jmt = { workspace = true }
known-proto = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
solana-sdk = { workspace = true }
tendermint = { workspace = true }
thiserror = { workspace = true }
