[package]
name = "eclipse-ibc-program"
description = "Eclipse IBC Core program"
version = "0.1.0"
homepage = "https://eclipse.builders/"
repository = "https://github.com/Eclipse-Laboratories-Inc/ibc"
authors = ["Eclipse Developers"]
edition = "2021"

[dependencies]
anyhow = "1.0.70"
bincode = "1.3.3"
eclipse-ibc-light-client = { path = "../light-client" }
eclipse-ibc-proto = { path = "../proto" }
eclipse-ibc-state = { path = "../state" }
hex = "0.4.3"
ibc = "0.37.0"
ibc-proto = "0.26.0"
known-proto = { path = "../known-proto" }
serde = "1.0.160"
solana-program-runtime = "=1.15.2"
solana-sdk = "=1.15.2"
tendermint = "0.29.1"
thiserror = "1.0.40"
