[package]
name = "eclipse-ibc-program"
description = "Eclipse IBC Core program"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
eclipse-ibc-extra-types = { workspace = true }
eclipse-ibc-light-client = { workspace = true }
eclipse-ibc-proto = { workspace = true }
eclipse-ibc-state = { workspace = true }
eclipse-known-proto = { workspace = true }
hex = { workspace = true }
ibc = { workspace = true }
ibc-proto = { workspace = true }
serde = { workspace = true }
solana-program-runtime = { workspace = true }
solana-sdk = { workspace = true }
tendermint = { workspace = true }
thiserror = { workspace = true }
