[package]
name = "eclipse-ibc-state"
description = "Eclipse IBC state"
version = "0.1.0"
homepage = "https://eclipse.builders/"
repository = "https://github.com/Eclipse-Laboratories-Inc/ibc"
authors = ["Eclipse Developers"]
edition = "2021"

[dependencies]
anyhow = "1.0.70"
bincode = "1.3.3"
derive_more = "0.99.17"
eclipse-ibc-proto = { path = "../proto" }
ibc = "0.36.0"
ibc-proto = "0.28.0"
ics23 = "0.9.0"
jmt = "0.4.0"
known-proto = { path = "../known-proto" }
prost = "0.11.8"
serde = "1.0.159"
sha2 = "0.10.6"
solana-program-runtime = "=1.15.2"
solana-sdk = "=1.15.2"
