[package]
name = "eclipse-ibc-state"
description = "Eclipse IBC state"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
derive_more = { workspace = true }
eclipse-ibc-light-client = { workspace = true }
eclipse-ibc-proto = { workspace = true }
eclipse-known-proto = { workspace = true }
ibc = { workspace = true }
ibc-proto = { workspace = true }
ics23 = { workspace = true }
jmt = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
solana-program-runtime = { workspace = true }
solana-sdk = { workspace = true }
